accessible/base/AccGroupInfo.cpp
@@ -59,7 +59,7 @@ void AccGroupInfo::Update() {
 
     // If the previous item in the group has calculated group information then
     // build group information for this item based on found one.
-    if (sibling->mBits.groupInfo) {
+    if (sibling->mBits.groupInfo && !sibling->HasDirtyGroupInfo()) {
       mPosInSet += sibling->mBits.groupInfo->mPosInSet;
       mParent = sibling->mBits.groupInfo->mParent;
       mSetSize = sibling->mBits.groupInfo->mSetSize;
@@ -93,7 +93,7 @@ void AccGroupInfo::Update() {
 
     // If the next item in the group has calculated group information then
     // build group information for this item based on found one.
-    if (sibling->mBits.groupInfo) {
+    if (sibling->mBits.groupInfo && !sibling->HasDirtyGroupInfo()) {
       mParent = sibling->mBits.groupInfo->mParent;
       mSetSize = sibling->mBits.groupInfo->mSetSize;
       return;
